# remote_table_py

./: pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml
src/remote_table/: core.py
tests/: link_test_data.py  test_remote_table.py
