[project]
name = "remote_table"
version = "0.1.0"
description = "A Python port of the remote_table Ruby gem. Reads tabular data from local and remote sources."
authors = ["David Willis <dwillis@gmail.com>"]
license = "MIT"
readme = "README.md"
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/dwillis/remote_table"

[tool.uv]
# uv will use this pyproject.toml for dependency management

[project.dependencies]
pandas = "*"
requests = "*"
openpyxl = "*"
pyyaml = "*"
beautifulsoup4 = "*"
lxml = "*"
odfpy = "*"
